--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -880,8 +880,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -900,7 +900,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -926,7 +926,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -939,7 +939,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -1213,7 +1213,7 @@ fra:
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
-        tax_assessment: "Avis d'imposition"
+        tax_assessment: "Avis d’imposition"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
         vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
@@ -1248,7 +1248,7 @@ fra:
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
-        tax_assessment: "Avis d'imposition"
+        tax_assessment: "Avis d’imposition"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
         vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
@@ -3529,8 +3529,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -3549,7 +3549,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -3575,7 +3575,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -3588,7 +3588,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -4354,8 +4354,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -4374,7 +4374,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -4400,7 +4400,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -4413,7 +4413,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -5438,8 +5438,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -5458,7 +5458,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -5484,7 +5484,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -5497,7 +5497,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -5748,8 +5748,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -5768,7 +5768,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -5794,7 +5794,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -5807,7 +5807,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -5837,8 +5837,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -5857,7 +5857,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -5883,7 +5883,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -5896,7 +5896,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
