--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -35,7 +35,7 @@ fra:
         store_liquid: "Stocker du vrac liquide"
         # superficial_plow: "Superficial plow"
         # swath: "Swath"
-        take_root: "S'enraciner"
+        take_root: "S’enraciner"
         tow: "Tracter"
     accounts:
       name: "Comptes comptables"
@@ -283,7 +283,7 @@ fra:
         second_growth: "Seconde croissance"
         senescence: "Sénescence"
     cation_exchange_capacity_analysis_methods:
-      name: "Méthodes d'analyse de la capacité d'échange cationique"
+      name: "Méthodes d’analyse de la capacité d’échange cationique"
       items:
         cobaltihexamine: "Cobaltihexamine"
         metson: "Metson"
@@ -869,7 +869,7 @@ fra:
         sales_invoice: "Facture de vente"
         sales_order: "Commande de vente"
         stocks: "Stocks"
-        tax_assessment: "Avis d'imposition"
+        tax_assessment: "Avis d’imposition"
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
         vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
@@ -992,8 +992,8 @@ fra:
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissane"
-        cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         clostridial_spores_concentration: "Concentration en spores butyriques"
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
@@ -1012,7 +1012,7 @@ fra:
         immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         inhibitors_presence: "Présence de résidus d’inhibiteurs"
         iron_concentration: "Teneur en Fer"
-        irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         lactating: "En lactation"
         last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         length: "Longueur"
@@ -1038,7 +1038,7 @@ fra:
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
         organic_matter_concentration: "Teneur en matière organique"
-        phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -1051,7 +1051,7 @@ fra:
         protein_matters_concentration: "Teneur en matières protéïques"
         reference_year: "Millésime"
         reproductor: "Reproducteur"
-        residue_elimination_method: "Méthode d'élimination des résidus"
+        residue_elimination_method: "Méthode d’élimination des résidus"
         row_plants_interval: "Intervalle inter-plants"
         sex: "Sexe"
         shape: "Forme"
@@ -1750,7 +1750,7 @@ fra:
         # valley_terrace_winter_barley_crop_med: "Valley terrace winter barley crop med"
         # valley_terrace_winter_barley_crop_min: "Valley terrace winter barley crop min"
     phosphorus_analysis_methods:
-      name: "Méthodes d'analyse du phosphore"
+      name: "Méthodes d’analyse du phosphore"
       items:
         dyer: "Dyer"
         joret_hebert: "Joret-Hebert"
@@ -2012,7 +2012,7 @@ fra:
         electricity: "Électricité"
         equipment: "Équipement"
         equipment_building_division: "Emplacement de stockage du matériel"
-        escourgeon_barley_crop: "Orge d'hiver Escourgeon"
+        escourgeon_barley_crop: "Orge d’hiver Escourgeon"
         euclide_wheat_crop: "Culture de blé tendre Euclide"
         euclide_wheat_seed_25: "Semence de blé tendre Euclide"
         ewe_milk: "Lait de brebis"
@@ -2022,7 +2022,7 @@ fra:
         female_young_cow: "Génisse"
         flap_silt_land_parcel: "Parcelle de limons battants"
         forager: "Ensileuse"
-        garlic_crop: "Culture d'ail"
+        garlic_crop: "Culture d’ail"
         gas: "Gaz"
         gasoline: "Essence"
         goat_milk: "Lait de chèvre"
@@ -2111,7 +2111,7 @@ fra:
         spreader_trailer: "Épandeur à fumier"
         spring_barley_crop: "Culture d’orge de printemps"
         spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
-        spring_oat_crop: "Culture d'avoine de printemps"
+        spring_oat_crop: "Culture d’avoine de printemps"
         strawberry_crop: "Culture de fraisier"
         sugar_vinasse: "Vinasse de sucrerie"
         sunflower_crop: "Culture de tournesol"
@@ -2139,7 +2139,7 @@ fra:
         wine_vinasse: "Vinasse de distillerie"
         winter_barley_crop: "Culture d’orge d’hiver"
         winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
-        winter_oat_crop: "Culture d'avoine d'hiver"
+        winter_oat_crop: "Culture d’avoine d’hiver"
         zea_herbicide: "Herbicide maïs"
     product_natures:
       name: "Types de produits"
@@ -2268,13 +2268,13 @@ fra:
         vine: "Vigne"
         wine_storehouse: "Cave"
         winery: "Chai"
-        winter_barley: "Orge d'hiver"
+        winter_barley: "Orge d’hiver"
         winter_hard_wheat: "Blé dur d’hiver"
-        winter_oat: "Avoine d'hiver"
+        winter_oat: "Avoine d’hiver"
         winter_soft_wheat: "Blé tendre d’hiver"
         without_crop: "Hors culture"
     residue_elimination_methods:
-      name: "Méthodes d'élimination des résidus"
+      name: "Méthodes d’élimination des résidus"
       items:
         burning: "Combustion"
         burying: "Enfouissement"
