--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -105,9 +105,7 @@ jpn:
       product_category: #?
       product_indicator_datum: #?
       product_localization:
-        # arrival_cause: "Cause d’entrée"
         # container: "Contenant"
-        # departure_cause: "Cause de sortie"
         # started_at: "Entrée"
         # stopped_at: "Sortie"
       product_move: #?
@@ -455,7 +453,7 @@ jpn:
     # annotation: "Annotation"
     # archived_at: "Archivé le"
     # archives: "Archives"
-    # archives_count: "Nombre d'archives"
+    # archives_count: "Nombre d’archives"
     # archiving: "Méthode d’archivage"
     # arrival_cause: "Cause d’entrée"
     # arrived_on: "Date d’entrée"
@@ -465,7 +463,7 @@ jpn:
     # attorney_journal: "Journal mandataire"
     # attorneys: "Mandataires"
     # attribute_name: "Nom de l’attribut"
-    # authentication_token: "Clef d'authentification"
+    # authentication_token: "Clef d’authentification"
     # author: "Auteur"
     # authorized_payments_count: "Nombre d’encaissements autorisés"
     # auto_updateable_addresses: "Adresses mises à jour automatiquement"
@@ -609,7 +607,7 @@ jpn:
     # delivery: "Livraison"
     # delivery_address: "Adresse pour la livraison"
     # delivery_items: "Lignes de livraison"
-    # departure_cause: "Causes de sortie"
+    # departure_cause: "Cause de sortie"
     # deposit: "Remise en banque"
     # depositable_payments: "Encaissements encaissables"
     # depositables_account: "Compte d’attente pour les encaissements à encaisser"
@@ -725,18 +723,19 @@ jpn:
     # incoming_payments: "Encaissements"
     # indicator: "Indicateur"
     # indicator_data: "Indicateur"
-    # indicator_datatype: "Type de l'indicateur"
+    # indicator_datatype: "Type de l’indicateur"
     # indicator_datum: "Indicator datum"
     # indicator_name: "Indicateur"
-    # indicators: "Indicators"
+    # indicators: "Indicateurs"
     # indirect_links: "Liens indirects"
     # individual: "Individuel"
-    # initial_arrival_cause: "Cause initiale d'arrivée"
     # initial_born_at: "Initial born at"
     # initial_container: "Emplacement initial"
+    # initial_enjoyer: "Initial enjoyer"
     # initial_number: "Numéro initial"
     # initial_owner: "Propriétaire initial"
     # initial_population: "Population initiale"
+    # initial_shape: "Initial shape"
     # integer_value: "Valeur entière"
     # intervention: "Intervention"
     # intervention_casts: "Intervention casts"
