--- a/config/locales/spa/enumerize.yml
+++ b/config/locales/spa/enumerize.yml
@@ -77,16 +77,8 @@ spa:
         # normal: "Normale"
         # notice: "Faible"
     product_localization:
-      arrival_cause:
-        # birth: "Naissance"
-        # housing: "Pension"
-        # other: "Autres"
-        # purchase: "Achat"
-      departure_cause:
-        # consumption: "Autoconsommation"
-        # death: "Décès"
-        # other: "Autres"
-        # sale: "Vente"
+      arrival_cause: #?
+      departure_cause: #?
       nature:
         # exterior: "Sortie"
         # interior: "Entrée"
