--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -32,7 +32,7 @@ spa:
         # store_fluid: "Stocker du vrac solide"
         # store_gaz: "Stocker du gaz"
         # store_liquid: "Stocker du vrac liquide"
-        # take_root: "S'enraciner"
+        # take_root: "S’enraciner"
         # tow: "Tracter"
       # name: "Compétences"
     accounts:
@@ -284,7 +284,7 @@ spa:
       items:
         # cobaltihexamine: "Cobaltihexamine"
         # metson: "Metson"
-      # name: "Méthodes d'analyse de la capacité d'échange cationique"
+      # name: "Méthodes d’analyse de la capacité d’échange cationique"
     charts_of_accounts:
       items:
         # fr_pcg82: "Plan comptable pcg82"
@@ -982,7 +982,7 @@ spa:
         # sales_invoice: "Facture de vente"
         # sales_order: "Commande de vente"
         # stocks: "Stocks"
-        # tax_assessment: "Avis d'imposition"
+        # tax_assessment: "Avis d’imposition"
         # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
         # vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
@@ -1091,8 +1091,8 @@ spa:
         # boron_concentration: "Teneur en Bore"
         # calcium_concentration: "Teneur en Calcium"
         # calving_ease_index: "Index de facilité de naissane"
-        # cation_exchange_capacity: "Capacité d'échange cationique (CEC)"
-        # cation_exchange_capacity_analysis_method: "Méthode d'analyse de la Capacité d'échange cationique (CEC)"
+        # cation_exchange_capacity: "Capacité d’échange cationique (CEC)"
+        # cation_exchange_capacity_analysis_method: "Méthode d’analyse de la Capacité d’échange cationique (CEC)"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
         # copper_concentration: "Teneur en Cuivre"
         # designation_origin: "Appellation"
@@ -1111,7 +1111,7 @@ spa:
         # immunoglobulins_concentration: "Concentration en immunoglobulines Gamma"
         # inhibitors_presence: "Présence de résidus d’inhibiteurs"
         # iron_concentration: "Teneur en Fer"
-        # irrigation_water_input_area_density: "Densité surfacique d'apport d'eau d'irrigation"
+        # irrigation_water_input_area_density: "Densité surfacique d’apport d’eau d’irrigation"
         # lactating: "En lactation"
         # last_birth_children_count: "Nombre de nouveaux-nés lors de la dernière naissance"
         # length: "Longueur"
@@ -1137,7 +1137,7 @@ spa:
         # nitrogen_concentration: "Teneur en azote"
         # nitrogen_input_area_density: "Densité d’apport d’azote"
         # organic_matter_concentration: "Teneur en matière organique"
-        # phosphorus_analysis_method: "Méthode d'analyse de la teneur en Phosphore"
+        # phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         # phosphorus_concentration: "Teneur en phosphore"
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
         # plant_reproduction_state: "Phase du bioprocessus de reproduction d’un végétal"
@@ -1150,7 +1150,7 @@ spa:
         # protein_matters_concentration: "Teneur en matières protéïques"
         # reference_year: "Millésime"
         # reproductor: "Reproducteur"
-        # residue_elimination_method: "Méthode d'élimination des résidus"
+        # residue_elimination_method: "Méthode d’élimination des résidus"
         # row_plants_interval: "Intervalle inter-plants"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1366,7 +1366,7 @@ spa:
         # dyer: "Dyer"
         # joret_hebert: "Joret-Hebert"
         # olsen: "Olsen"
-      # name: "Méthodes d'analyse du phosphore"
+      # name: "Méthodes d’analyse du phosphore"
     plant_life_states:
       items:
         # booting: "Montaison"
@@ -1605,7 +1605,7 @@ spa:
         # electricity: "Électricité"
         # equipment: "Équipement"
         # equipment_building_division: "Emplacement de stockage du matériel"
-        # escourgeon_barley_crop: "Orge d'hiver Escourgeon"
+        # escourgeon_barley_crop: "Orge d’hiver Escourgeon"
         # euclide_wheat_crop: "Culture de blé tendre Euclide"
         # euclide_wheat_seed_25: "Semence de blé tendre Euclide"
         # ewe_milk: "Lait de brebis"
@@ -1615,7 +1615,7 @@ spa:
         # female_young_cow: "Génisse"
         # flap_silt_land_parcel: "Parcelle de limons battants"
         # forager: "Ensileuse"
-        # garlic_crop: "Culture d'ail"
+        # garlic_crop: "Culture d’ail"
         # gas: "Gaz"
         # gasoline: "Essence"
         # goat_milk: "Lait de chèvre"
@@ -1703,7 +1703,7 @@ spa:
         # spreader_trailer: "Épandeur à fumier"
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
-        # spring_oat_crop: "Culture d'avoine de printemps"
+        # spring_oat_crop: "Culture d’avoine de printemps"
         # strawberry_crop: "Culture de fraisier"
         # sugar_vinasse: "Vinasse de sucrerie"
         # sunflower_crop: "Culture de tournesol"
@@ -1731,7 +1731,7 @@ spa:
         # wine_vinasse: "Vinasse de distillerie"
         # winter_barley_crop: "Culture d’orge d’hiver"
         # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
-        # winter_oat_crop: "Culture d'avoine d'hiver"
+        # winter_oat_crop: "Culture d’avoine d’hiver"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1856,9 +1856,9 @@ spa:
         # vine: "Vigne"
         # wine_storehouse: "Cave"
         # winery: "Chai"
-        # winter_barley: "Orge d'hiver"
+        # winter_barley: "Orge d’hiver"
         # winter_hard_wheat: "Blé dur d’hiver"
-        # winter_oat: "Avoine d'hiver"
+        # winter_oat: "Avoine d’hiver"
         # winter_soft_wheat: "Blé tendre d’hiver"
         # without_crop: "Hors culture"
       # name: "Types de production"
@@ -1867,7 +1867,7 @@ spa:
         # burning: "Combustion"
         # burying: "Enfouissement"
         # evacuation: "Évacuation"
-      # name: "Méthodes d'élimination des résidus"
+      # name: "Méthodes d’élimination des résidus"
     roles: #?
     sexes:
       items:
