--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -1176,6 +1176,7 @@ eng:
         # copper_concentration: "Teneur en Cuivre"
         # designation_origin: "Appellation"
         # dry_matter_rate: "Taux de matière sèche"
+        # easement_area: "Emprise au sol"
         # economical_milk_index: "Index économique laitier (INEL)"
         # energy: "Énergie"
         # fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -1207,8 +1208,9 @@ eng:
         mammalia_reproduction_state: "Mammalia reproduction state"
         # manganese_concentration: "Teneur en Manganèse"
         # mass_area_yield: "Rendement de masse surfacique"
-        # maximum_load_net_mass: "Masse nette maximale en charge"
-        # maximum_load_net_volume: "Capacité volumique nette maximum"
+        # maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        # maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        # maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         # molybdenum_concentration: "Teneur en Molybdene"
@@ -1218,6 +1220,9 @@ eng:
         # net_volume: "Volume net"
         # nitrogen_concentration: "Teneur en azote"
         # nitrogen_input_area_density: "Densité d’apport d’azote"
+        # nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        # nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        # nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         # organic_matter_concentration: "Teneur en matière organique"
         # phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         # phosphorus_concentration: "Teneur en phosphore"
