--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -892,6 +892,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -920,8 +921,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -931,6 +933,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
@@ -3559,6 +3564,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -3587,8 +3593,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -3598,6 +3605,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
@@ -4390,6 +4400,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -4418,8 +4429,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -4429,6 +4441,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
@@ -5482,6 +5497,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -5510,8 +5526,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -5521,6 +5538,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
@@ -5794,6 +5814,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -5822,8 +5843,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -5833,6 +5855,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
@@ -5883,6 +5908,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -5911,8 +5937,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -5922,6 +5949,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
