--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -998,6 +998,7 @@ fra:
         copper_concentration: "Teneur en Cuivre"
         designation_origin: "Appellation"
         dry_matter_rate: "Taux de matière sèche"
+        easement_area: "Emprise au sol"
         economical_milk_index: "Index économique laitier (INEL)"
         energy: "Énergie"
         fat_matter_concentration_index: "Taux butyreux (TB)"
@@ -1026,8 +1027,9 @@ fra:
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         manganese_concentration: "Teneur en Manganèse"
         mass_area_yield: "Rendement de masse surfacique"
-        maximum_load_net_mass: "Masse nette maximale en charge"
-        maximum_load_net_volume: "Capacité volumique nette maximum"
+        maximal_storable_easement_area: "Capacité de stockage surfacique maximale (emprise au sol)"
+        maximal_storable_net_mass: "Capacité de stockage massique maximale"
+        maximal_storable_net_volume: "Capacité de stockage volumique maximale"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         molybdenum_concentration: "Teneur en Molybdene"
@@ -1037,6 +1039,9 @@ fra:
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
         nitrogen_input_area_density: "Densité d’apport d’azote"
+        nominal_storable_easement_area: "Capacité de stockage surfacique nominale (emprise au sol)"
+        nominal_storable_net_mass: "Capacité de stockage massique nominale"
+        nominal_storable_net_volume: "Capacité de stockage volumique nominale"
         organic_matter_concentration: "Teneur en matière organique"
         phosphorus_analysis_method: "Méthode d’analyse de la teneur en Phosphore"
         phosphorus_concentration: "Teneur en phosphore"
